tdf#94858, avoid O(n^2) algorithm during outline import

The old code set called the outline visibility code for each row. Now we
are just calling it once at the end of the import.

Change-Id: Ie19f8bd538495cb50a7618156aed8de832885c2a
Reviewed-on: https://gerrit.libreoffice.org/22239
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>