sc/inc/olinetab.hxx
@@ -136,6 +136,8 @@ public:
     bool ManualAction(
         SCCOLROW nStartPos, SCCOLROW nEndPos, bool bShow, const ScTable& rTable, bool bCol);
 
+    void finalizeImport(ScTable& rTable, bool bCol);
+
     void RemoveAll();
 };
 
